[ADD] 5주차 Issue 추가

--- a/5주차/5주차_정리.md
+++ b/5주차/5주차_정리.md
@@ -2,7 +2,7 @@
 
 ## 이슈
 
-### Postman의 form-data 이슈
+### Postman의 form-data 이슈 (1)
 
 - `Node.js`에서 `multer`를 사용하여 파일을 받아오고 있는 상태
 - `Postman`에서 `Content-Type`을 `form-data`로 설정한 후 `Node.js`에서 설정한 키 값으로 전송하면
@@ -12,3 +12,15 @@
 #### 해결 방안
 
 - 요청을 할 때마다 `Postman`에서 새로 파일을 선택
+
+
+### Postman의 form-data 이슈 (2)
+
+- `Node.js`에서 `multer`의 `fields`함수를 사용하여 파일을 받아오고 있는 상태
+- 앞서 `Postman`에서 **키 값을 변경**하면 `req.file`에 `undefined`가 삽입된다고 하였다.
+- 여기서도 마찬가지, `imgs`라는 필드와 `thumbnail`이라는 필드 둘 다 이미지를 넣어주고 싶었지만,
+- `imgs`에 이미지를 넣은 후 `thumbnail`에 이미지를 넣은 후 요청을 보내면 `imgs`에 `undefined`가 삽입됨.
+
+#### 해결 방안
+
+- 걍 `Postman` 쓰지 않고 `html`로 짬;
